--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,4 +1,6 @@
-<form action="/recipes" method="post">
+
+
+<form method="post" action="/recipes">
   Name<input type="text" name="name">
   Ingredients<input type="text" name="ingredients">
   Cook Time<input type="text" name="cook_time">
